force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/cgcloud__Promotion_Template_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>Object for the creation of promotion hierarchies.</description>
    <label>Promotion Template Hierarchy</label>
    <nameField>
        <displayFormat>PTH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Template Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>