force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/fields/cgcloud__Child_Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Child_Promotion_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to a promotion template.</description>
    <label>Child Promotion Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Promotion_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>Parent Promotion Templates</relationshipLabel>
    <relationshipName>Parent_Promotion_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>