force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/fields/cgcloud__Copied_Components__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Copied_Components__c</fullName>
    <label>Copied Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Tactics</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>ManualInput</fullName>
                <label>Manual Input</label>
            </value>
            <value>
                <fullName>TCCD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>