force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/fields/cgcloud__Parent_Child_Usage_Combo__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Child_Usage_Combo__c</fullName>
    <label>Parent Child Usage Combo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>