force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/fields/cgcloud__Parent_Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Promotion_Template__c</fullName>
    <description>Master-Detail relation to a promotion template.</description>
    <label>Parent Promotion Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Promotion_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>Child Promotion Templates</relationshipLabel>
    <relationshipName>Child_Promotion_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>