force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/fields/cgcloud__Usage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage__c</fullName>
    <description>Defines the process type (Copy / Derive / Push) for which this relation record is used.</description>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copy</fullName>
            </value>
            <value>
                <fullName>Derive</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>