force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__BOM_Handling_Mismatch_Derive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__BOM_Handling_Mismatch_Derive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL(cgcloud__Usage__c, &apos;Derive&apos;),  TEXT(cgcloud__Child_Promotion_Template__r.cgcloud__BOM_Handler__c)  &lt;&gt;  TEXT(cgcloud__Parent_Promotion_Template__r.cgcloud__BOM_Handler__c) )</errorConditionFormula>
    <errorMessage>The Parent and the Child Promotion Template with Usage as Derive must have the same BOM Handling.</errorMessage>
</ValidationRule>