force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Child_Active_Parent_Derivable.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Child_Active_Parent_Derivable</fullName>
    <active>true</active>
    <description>A child Template is always active for  Derivable Parent Promotion Templates</description>
    <errorConditionFormula>AND(cgcloud__Parent_Promotion_Template__r.cgcloud__Is_Derivable__c,
			NOT(cgcloud__Child_Promotion_Template__r.cgcloud__Active__c)
		)</errorConditionFormula>
    <errorMessage>A child Template is always active for Derivable Parent Promotion Templates.</errorMessage>
</ValidationRule>