force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Copied_Components_Check_On_Derive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Copied_Components_Check_On_Derive</fullName>
    <active>true</active>
    <description>Copied Components for a Derivable Promotion Template cannot include Manual Input.</description>
    <errorConditionFormula>AND(
			ISPICKVAL(cgcloud__Usage__c,&quot;Derive&quot;),
			INCLUDES(cgcloud__Copied_Components__c,&apos;ManualInput&apos;)
		)</errorConditionFormula>
    <errorMessage>Copied Components for a Derivable Promotion Template cannot include Manual Input.</errorMessage>
</ValidationRule>