force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Different_Templates_If_Usage_Derive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Different_Templates_If_Usage_Derive</fullName>
    <active>true</active>
    <description>Child Template must be different from the Parent Template for the Usage as Derive</description>
    <errorConditionFormula>AND(
		ISPICKVAL(cgcloud__Usage__c, &quot;Derive&quot;),
		cgcloud__Child_Promotion_Template__c = cgcloud__Parent_Promotion_Template__c )</errorConditionFormula>
    <errorMessage>Child Template must be different from the Parent Template for the Usage as Derive.</errorMessage>
</ValidationRule>