force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Different_Templates_If_Usage_Push.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Different_Templates_If_Usage_Push</fullName>
    <active>true</active>
    <description>Child Template must be different from the Parent Template for the Usage as Push</description>
    <errorConditionFormula>AND( 
		ISPICKVAL(cgcloud__Usage__c, &quot;Push&quot;),
		cgcloud__Child_Promotion_Template__c = cgcloud__Parent_Promotion_Template__c )</errorConditionFormula>
    <errorMessage>Child Template must be different from the Parent Template for the Usage as Push.</errorMessage>
</ValidationRule>