force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Product_Definition_Policy_MismatchPush.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Product_Definition_Policy_MismatchPush</fullName>
    <active>true</active>
    <description>The Parent and the Child Promotion Template with Usage as Push must have the same Product Definition Policy.</description>
    <errorConditionFormula>AND(
			ISPICKVAL(cgcloud__Usage__c,&quot;Push&quot;),
			OR(
			AND(
			INCLUDES( cgcloud__Parent_Promotion_Template__r.cgcloud__Product_Definition_Policy__c , &quot;Static&quot;),
			NOT(INCLUDES( cgcloud__Child_Promotion_Template__r.cgcloud__Product_Definition_Policy__c ,&quot;Static&quot;)
			)
			),
			AND(
			INCLUDES( cgcloud__Parent_Promotion_Template__r.cgcloud__Product_Definition_Policy__c , &quot;Dynamic&quot;),
			NOT(INCLUDES( cgcloud__Child_Promotion_Template__r.cgcloud__Product_Definition_Policy__c ,&quot;Dynamic&quot;)
			))
			)
		)</errorConditionFormula>
    <errorMessage>The Parent and the Child Promotion Template with Usage as Push must have the same Product Definition Policy.</errorMessage>
</ValidationRule>