force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Promotion_Type_Mismatch_Derive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Promotion_Type_Mismatch_Derive</fullName>
    <active>true</active>
    <description>The Parent and the Child Promotion Template with Usage as Derive must have the same Promotion Type.</description>
    <errorConditionFormula>AND(
		ISPICKVAL(cgcloud__Usage__c,&quot;Derive&quot;),
		TEXT(cgcloud__Child_Promotion_Template__r.cgcloud__Promotion_Type__c) &lt;&gt; TEXT(cgcloud__Parent_Promotion_Template__r.cgcloud__Promotion_Type__c))</errorConditionFormula>
    <errorMessage>The Parent and the Child Promotion Template with Usage as Derive must have the same Promotion Type.</errorMessage>
</ValidationRule>