force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Pushable_Child_Usage_Push.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Pushable_Child_Usage_Push</fullName>
    <active>true</active>
    <description>A child cannot be Pushable if Usage is Push</description>
    <errorConditionFormula>AND(cgcloud__Child_Promotion_Template__r.cgcloud__Is_Pushable__c , ISPICKVAL(cgcloud__Usage__c,&quot;Push&quot;))</errorConditionFormula>
    <errorMessage>A child cannot be Pushable if Usage is Push.</errorMessage>
</ValidationRule>