force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Sales_Org_Mismatch_Derive.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Mismatch_Derive</fullName>
    <active>true</active>
    <description>The Parent and the Child Promotion Template with Usage as Derive must have the same Sales Org.</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Usage__c, &quot;Derive&quot;),
		TEXT(cgcloud__Child_Promotion_Template__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Parent_Promotion_Template__r.cgcloud__Sales_Org__c))</errorConditionFormula>
    <errorMessage>The Parent and the Child Promotion Template with Usage as Derive must have the same Sales Org.</errorMessage>
</ValidationRule>