force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Sales_Org_Mismatch_Push.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Mismatch_Push</fullName>
    <active>true</active>
    <description>The Parent Promotion Template and the Child Promotion Template must have the same Sales Org.</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Usage__c, &quot;Push&quot;), 
		TEXT(cgcloud__Child_Promotion_Template__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Parent_Promotion_Template__r.cgcloud__Sales_Org__c))</errorConditionFormula>
    <errorMessage>The Parent Promotion Template and the Child Promotion Template must have the same Sales Org.</errorMessage>
</ValidationRule>