force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__UI_Type_mismatch_For_Derive_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__UI_Type_mismatch_For_Derive_Usage</fullName>
    <active>true</active>
    <description>The Parent and the Child Promotion Template with Usage as Derive must have the same UI Type.</description>
    <errorConditionFormula>AND(
		ISPICKVAL(cgcloud__Usage__c,&quot;Derive&quot;),
		TEXT(cgcloud__Child_Promotion_Template__r.cgcloud__UI_Type__c) &lt;&gt; TEXT(cgcloud__Parent_Promotion_Template__r.cgcloud__UI_Type__c)
		)</errorConditionFormula>
    <errorMessage>The Parent and the Child Promotion Template with Usage as Derive must have the same UI Type.</errorMessage>
</ValidationRule>