force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__UI_Type_mismatch_For_Push_Usage.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__UI_Type_mismatch_For_Push_Usage</fullName>
    <active>true</active>
    <description>The Parent and the Child Promotion Template with Usage as Push must have UI Type as Smart UI.</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Usage__c,&quot;Push&quot;),
		OR(
		NOT(ISPICKVAL(cgcloud__Child_Promotion_Template__r.cgcloud__UI_Type__c,&quot;SmartUI&quot;)),
		NOT(ISPICKVAL(cgcloud__Parent_Promotion_Template__r.cgcloud__UI_Type__c,&quot;SmartUI&quot;))
		))</errorConditionFormula>
    <errorMessage>The Parent and the Child Promotion Template with Usage as Push must have UI Type as Smart UI.</errorMessage>
</ValidationRule>