force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Usage_Derive_Child_Anchor_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Usage_Derive_Child_Anchor_Type</fullName>
    <active>true</active>
    <description>The Child Promotion Template with Usage as Derive must have customer as anchor type.</description>
    <errorConditionFormula>AND(
		ISPICKVAL(cgcloud__Usage__c,&quot;Derive&quot;),
		NOT(ISPICKVAL(cgcloud__Child_Promotion_Template__r.cgcloud__Anchor_Type__c, &quot;Customer&quot;)))</errorConditionFormula>
    <errorMessage>The Child Promotion Template with Usage as Derive must have customer as anchor type.</errorMessage>
</ValidationRule>