force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Usage_Derive_Parent_Anchor_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Usage_Derive_Parent_Anchor_Type</fullName>
    <active>true</active>
    <description>The Parent Promotion Template with Usage as Derive must have customer or customer set as anchor type.</description>
    <errorConditionFormula>AND(
		ISPICKVAL(cgcloud__Usage__c,&quot;Derive&quot;),
		ISNULL(TEXT(cgcloud__Parent_Promotion_Template__r.cgcloud__Anchor_Type__c)))</errorConditionFormula>
    <errorMessage>The Parent Promotion Template with Usage as Derive must have customer or customer set as anchor type.</errorMessage>
</ValidationRule>