force-app/main/default/objects/cgcloud__Promotion_Template_Hierarchy__c/validationRules/cgcloud__Usage_Push_Parent_Anchor_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Usage_Push_Parent_Anchor_Type</fullName>
    <active>true</active>
    <description>The Parent Promotion Template with Usage as Push must have Customer or Customer Set as anchor type.</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Usage__c, &apos;Push&apos;), ISBLANK(TEXT(cgcloud__Parent_Promotion_Template__r.cgcloud__Anchor_Type__c)))</errorConditionFormula>
    <errorMessage>The Parent Promotion Template with Usage as Push must have Customer or Customer Set as anchor type.</errorMessage>
</ValidationRule>